crates/red_knot_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Calls_to_overloaded_functions.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Calls to overloaded functions
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | type("Foo", ())  # error: [no-matching-overload]
```

# Diagnostics

```
error: lint:no-matching-overload
 --> /src/mdtest_snippet.py:1:1
  |
1 | type("Foo", ())  # error: [no-matching-overload]
  | ^^^^^^^^^^^^^^^ No overload of class `type` matches arguments
  |

```
