crates/red_knot_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Different_files.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Different files
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## package.py

```
1 | def foo(x: int) -> int:
2 |     return x * x
```

## mdtest_snippet.py

```
1 | import package
2 | 
3 | package.foo("hello")  # error: [invalid-argument-type]
```

# Diagnostics

```
error: lint:invalid-argument-type: Argument to this function is incorrect
 --> src/mdtest_snippet.py:3:13
  |
1 | import package
2 |
3 | package.foo("hello")  # error: [invalid-argument-type]
  |             ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/package.py:1:5
  |
1 | def foo(x: int) -> int:
  |     ^^^ ------ Parameter declared here
2 |     return x * x
  |

```
