crates/red_knot_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Different_source_order.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Different source order
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def bar():
2 |     foo("hello")  # error: [invalid-argument-type]
3 | 
4 | def foo(x: int) -> int:
5 |     return x * x
```

# Diagnostics

```
error: lint:invalid-argument-type: Argument to this function is incorrect
 --> src/mdtest_snippet.py:2:9
  |
1 | def bar():
2 |     foo("hello")  # error: [invalid-argument-type]
  |         ^^^^^^^ Expected `int`, found `Literal["hello"]`
3 |
4 | def foo(x: int) -> int:
  |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
2 |     foo("hello")  # error: [invalid-argument-type]
3 |
4 | def foo(x: int) -> int:
  |     ^^^ ------ Parameter declared here
5 |     return x * x
  |

```
