crates/red_knot_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Tests_for_a_variety_of_argument_types_-_One_keyword_argument.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Tests for a variety of argument types - One keyword argument
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(x: int, y: int, z: int = 0) -> int:
2 |     return x * y * z
3 | 
4 | foo(1, 2, "hello")  # error: [invalid-argument-type]
```

# Diagnostics

```
error: lint:invalid-argument-type: Argument to this function is incorrect
 --> src/mdtest_snippet.py:4:11
  |
2 |     return x * y * z
3 |
4 | foo(1, 2, "hello")  # error: [invalid-argument-type]
  |           ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(x: int, y: int, z: int = 0) -> int:
  |     ^^^                 ---------- Parameter declared here
2 |     return x * y * z
  |

```
